--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -221,8 +221,8 @@
 
    // Configure series
    const polygonTemplate = polygonSeries.mapPolygons.template;
-
-   polygonTemplate.tooltipHTML = '<b>{name}: {value}</b><br><a href="http://147.8.194.29:5000/tasks/table_view?main=%7B%22meta_dataset%22%3A+%7B%22$in%22%3A+%5B{dataset}5D%7D%7D">Explore</a>';
+   // %22 is "", %5D is ] %5B is [
+   polygonTemplate.tooltipHTML = '<b>{name}: {value}</b><br><a href="http://147.8.194.29:5000/tasks/table_view?main=%7B%22pbmc.Country%22%3A+%7B%22$in%22%3A+%5B%22{dataset}%22%5D%7D%7D">Explore</a>';
    polygonTemplate.fill = am4core.color("rgba(110, 166, 157, 0.5)");
    //polygonTemplate.tooltipText = '<b>{name}: {value}</b>';
 
@@ -261,19 +261,19 @@
           } else if (j == objs.length - 1) {
             console.log(data["Country Code"][country])
             if (data["Country Code"][country] == "US") {
-              obj.dataset = "%22COMBAT_2022%22,+%22Stephenson_2021%22%"
+              obj.dataset = "US"
             } else if (data["Country Code"][country] == "GB") {
-              obj.dataset = "%22Lee_2020%22,+%22Liu_2021%22%"
+              obj.dataset = "UK"
             } else if (data["Country Code"][country] == "DE") {
-              obj.dataset = ""
+              obj.dataset = "Germany"
             } else if (data["Country Code"][country] == "IL") {
-              obj.dataset = ""
+              obj.dataset = "Israel"
             } else if (data["Country Code"][country] == "KR") {
-              obj.dataset = ""
+              obj.dataset = "South Korea"
             } else if (data["Country Code"][country] == "CN") {
-              obj.dataset = ""
+              obj.dataset = "China"
             } else if (data["Country Code"][country] == "NL") {
-              obj.dataset = ""
+              obj.dataset = "Netherlands"
             } else if (data["Country Code"][country] == "FR") {
               obj.dataset = ""
             } else if (data["Country Code"][country] == "CA") {
@@ -286,19 +286,19 @@
       } else {
         console.log(data["Country Code"][country])
         if (data["Country Code"][country] == "US") {
-          obj.dataset = "%22COMBAT_2022%22,+%22Stephenson_2021%22%"
+          obj.dataset = "US"
         } else if (data["Country Code"][country] == "GB") {
-          obj.dataset = "%22Lee_2020%22,+%22Liu_2021%22%"
+          obj.dataset = "UK"
         } else if (data["Country Code"][country] == "DE") {
-          obj.dataset = ""
+          obj.dataset = "Germany"
         } else if (data["Country Code"][country] == "IL") {
-          obj.dataset = ""
+          obj.dataset = "Israel"
         } else if (data["Country Code"][country] == "KR") {
-          obj.dataset = ""
+          obj.dataset = "South Korea"
         } else if (data["Country Code"][country] == "CN") {
-          obj.dataset = ""
+          obj.dataset = "China"
         } else if (data["Country Code"][country] == "NL") {
-          obj.dataset = ""
+          obj.dataset = "Netherlands"
         } else if (data["Country Code"][country] == "FR") {
           obj.dataset = ""
         } else if (data["Country Code"][country] == "CA") {
