--- a/flaskstarter/templates/tasks/show_scfeature.html
+++ b/flaskstarter/templates/tasks/show_scfeature.html
@@ -28,15 +28,15 @@
     </form>  
   </td> -->
 
-  <td>Dataset</td>
+  <!-- <td>Dataset</td> -->
   <td>
     <form action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
-      <select id="opt_dataset" name="name_opt_dataset">
+      <!-- <select id="opt_dataset" name="name_opt_dataset">
           <option label=" "></option>
           {% for val in datasets %}
           <option value="{{val}}">{{val}}</option>
           {% endfor %}
-      </select>
+      </select> -->
 
       <td>Cell types</td>
       <select id="opt_celltype" name="name_opt_celltype">
