Change pagingType to Input, change pagination mechanisms

--- a/flaskstarter/templates/layouts/base.html
+++ b/flaskstarter/templates/layouts/base.html
@@ -13,7 +13,7 @@
   <!-- Bootstrap core CSS -->
   <link href="{{ url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
 
 
   <!-- CSS -->
@@ -50,10 +50,12 @@
   <script src="{{ url_for('static', filename='bootstrap.bundle.min.js')}}"></script>
 
 
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap4.min.js"></script>
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/1.1.1/js/bootstrap-multiselect.js"></script>
+
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/plug-ins/1.12.1/pagination/input.js"></script>
 
   {% block scripts %}{% endblock %}
 
