--- a/flaskstarter/templates/layouts/footer.html
+++ b/flaskstarter/templates/layouts/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('tasks.home') }}"><img
+        <a class="navbar-brand" href="{{ url_for('frontend.index') }}"><img
                 src="{{url_for('static', filename='D24H_Logo.png')}}" width="273" height="129" /></a>
         <div class="d-flex justify-content-between">
             <p>Copyright © 2022 Laboratory of Data Discovery for Health (D²4H). All Rights Reserved.</p>
