--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -4,14 +4,8 @@
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.index') }}">Home</a>
     </li>
-    <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore Data</a>
-          <!-- .dropdown-menu 下拉選單內容 -->
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ url_for('tasks.table_view') }}">scRNA-seq</a>
-            <a class="dropdown-item" href="{{ url_for('naso.naso_tableview') }}">Naso</a>
-            <a class="dropdown-item" href="#">Balf</a>
-          </div>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Insights</a>
@@ -47,10 +41,10 @@
 <div class="collapse navbar-collapse" id="navbarResponsive">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Home</a>
+      <a class="nav-link" href="{{ url_for('frontend.index') }}">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore Data</a>
+      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore</a>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Insights</a>
